diesel_compile_tests/tests/compile-fail/table_invalid_syntax_2.rs
#[macro_use] extern crate diesel;

table! {
     some wrong syntax
}
//~^ ERROR environment variable `invalid table! syntax` not defined

fn main() {}
